@@ -100,3 +100,63 @@ dialog_escape_key_handler_hide (GtkWidget *widget, GdkEventKey *event, gpointer 
 	return FALSE;
 }
 
+/* Code taken from gedit (gedit/gedit-utils.c)
+ * These functions are GtkMenuPositionFunc callbacks. */
+void
+menu_position_under_widget (GtkMenu *menu, gint *x, gint *y, gboolean *push_in, gpointer user_data)
+{
+	GtkWidget *w = GTK_WIDGET (user_data);
+	GtkRequisition requisition;
+
+	gdk_window_get_origin (w->window, x, y);
+	gtk_widget_size_request (GTK_WIDGET (menu), &requisition);
+
+	if (gtk_widget_get_direction (w) == GTK_TEXT_DIR_RTL)
+		*x += w->allocation.x + w->allocation.width - requisition.width;
+	else
+		*x += w->allocation.x;
+
+	*y += w->allocation.y + w->allocation.height;
+
+	*push_in = TRUE;
+}
+
+void
+menu_position_under_tree_view (GtkMenu *menu, gint *x, gint *y, gboolean *push_in, gpointer user_data)
+{
+	GtkTreeView *tree = GTK_TREE_VIEW (user_data);
+	GtkTreeModel *model;
+	GtkTreeSelection *selection;
+	GtkTreeIter iter;
+
+	model = gtk_tree_view_get_model (tree);
+	g_return_if_fail (model != NULL);
+
+	selection = gtk_tree_view_get_selection (tree);
+	g_return_if_fail (selection != NULL);
+
+	if (gtk_tree_selection_get_selected (selection, NULL, &iter)) {
+		GtkTreePath *path;
+		GdkRectangle rect;
+
+		gdk_window_get_origin (GTK_WIDGET (tree)->window, x, y);
+
+		path = gtk_tree_model_get_path (model, &iter);
+		gtk_tree_view_get_cell_area (tree, path,
+					     gtk_tree_view_get_column (tree, 0),
+					     &rect);
+		gtk_tree_path_free (path);
+
+		*x += rect.x;
+		*y += rect.y + rect.height;
+
+		if (gtk_widget_get_direction (GTK_WIDGET (tree)) == GTK_TEXT_DIR_RTL) {
+			GtkRequisition requisition;
+			gtk_widget_size_request (GTK_WIDGET (menu), &requisition);
+			*x += rect.width - requisition.width;
+		}
+	} else {
+		/* no selection -> regular "under widget" positioning */
+		menu_position_under_widget (menu, x, y, push_in, tree);
+	}
+}
